# valet

./: .gitignore  .gitreview  NOTE  README  README.md  README.rst  initox.sh  requirements.txt  run_all_tests.sh  run_test.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
openstack/allegro/: CONTRIBUTING.rst  HACKING.rst  MAINTAINERS  README.rst  functions.sh  generate-config-file.sh  run-functional-tests.sh  setup-test-env-es.sh  setup-test-env-mongodb.sh  setup-test-env-mysql.sh  setup-test-env-postgresql.sh  setup.cfg  tox.ini
openstack/allegro/allegro/: collector.py  coordination.py  i18n.py  keystone_client.py  messaging.py  middleware.py  neutron_client.py  notification.py  nova_client.py  opts.py  pipeline.py  service.py  service_base.py  utils.py  version.py
openstack/allegro/allegro/agent/: manager.py  plugin_base.py
openstack/allegro/allegro/alarm/: __init__.py  rpc.py  service.py
openstack/allegro/allegro/api/: __init__.py  app.py  app.wsgi  config.py  hooks.py  middleware.py
openstack/allegro/allegro/cmd/: api.py
openstack/allegro/allegro/compute/: discovery.py
openstack/allegro/allegro/database/: notifications.py
openstack/allegro/allegro/dispatcher/: __init__.py  database.py  file.py  gnocchi.py  gnocchi_client.py  http.py
openstack/allegro/allegro/dns/: notifications.py
openstack/allegro/allegro/energy/: kwapi.py
openstack/allegro/allegro/event/: converter.py  endpoint.py
openstack/allegro/allegro/hacking/: checks.py
openstack/allegro/allegro/hardware/: discovery.py
openstack/allegro/allegro/image/: glance.py
openstack/allegro/allegro/meter/: notifications.py
openstack/allegro/allegro/network/: floatingip.py  notifications.py
openstack/allegro/allegro/objectstore/: rgw.py  rgw_client.py  swift.py
openstack/allegro/allegro/publisher/: __init__.py  direct.py  file.py  kafka_broker.py  messaging.py  test.py  udp.py  utils.py
openstack/allegro/allegro/storage/: __init__.py  base.py  impl_db2.py  impl_hbase.py  impl_log.py  impl_mongodb.py  impl_sqlalchemy.py  models.py  pymongo_base.py
openstack/allegro/allegro/telemetry/: notifications.py
openstack/allegro/allegro/tests/: base.py  db.py  mocks.py  pipeline_base.py
openstack/allegro/allegro/transformer/: accumulator.py  arithmetic.py  conversions.py
openstack/allegro/devstack/: apache-allegro.template  plugin.sh  settings
openstack/allegro/devstack/upgrade/: settings  shutdown.sh  upgrade.sh
openstack/allegro/doc/: Makefile
openstack/allegro/doc/source/: conf.py
openstack/allegro/etc/allegro/: README-allegro.conf.txt  api_paste.ini  gnocchi_archive_policy_map.yaml  rootwrap.conf
openstack/allegro/etc/apache2/: allegro
openstack/allegro/rally-jobs/: README.rst  allegro.yaml
openstack/allegro/rally-jobs/plugins/: plugin_sample.py
openstack/allegro/releasenotes/source/: conf.py
openstack/allegro/tools/: allegro-test-event.py  enable_notifications.sh  lintstack.py  make_test_data.py  make_test_event_data.py  send_test_data.py  show_data.py  test_hbase_table_utils.py
openstack/valet/: CONTRIBUTING.rst  HACKING.rst  MAINTAINERS  README.rst  functions.sh  generate-config-file.sh  run-functional-tests.sh  setup-test-env-es.sh  setup-test-env-mongodb.sh  setup-test-env-mysql.sh  setup-test-env-postgresql.sh  setup.cfg  tox.ini
openstack/valet/devstack/: apache-valet.template  plugin.sh  settings
openstack/valet/devstack/upgrade/: settings  shutdown.sh  upgrade.sh
openstack/valet/doc/: Makefile
openstack/valet/doc/source/: conf.py
openstack/valet/etc/apache2/: valet
openstack/valet/etc/valet/: README-valet.conf.txt  api_paste.ini  gnocchi_archive_policy_map.yaml  rootwrap.conf
openstack/valet/rally-jobs/: README.rst  valet.yaml
openstack/valet/rally-jobs/plugins/: plugin_sample.py
openstack/valet/releasenotes/source/: conf.py
openstack/valet/tools/: enable_notifications.sh  lintstack.py  make_test_data.py  make_test_event_data.py  send_test_data.py  show_data.py  test_hbase_table_utils.py  valet-test-event.py
openstack/valet/valet/: collector.py  coordination.py  i18n.py  keystone_client.py  messaging.py  middleware.py  neutron_client.py  notification.py  nova_client.py  opts.py  pipeline.py  service.py  service_base.py  utils.py  version.py
openstack/valet/valet/agent/: manager.py  plugin_base.py
openstack/valet/valet/alarm/: __init__.py  rpc.py  service.py
openstack/valet/valet/api/: __init__.py  app.py  app.wsgi  config.py  hooks.py  middleware.py
openstack/valet/valet/cmd/: api.py
openstack/valet/valet/compute/: discovery.py
openstack/valet/valet/database/: notifications.py
openstack/valet/valet/dispatcher/: __init__.py  database.py  file.py  gnocchi.py  gnocchi_client.py  http.py
ostro_listener/: README.md  requirements.txt  setup.cfg  setup.py
ostro_listener/etc/listener/: daemon_initd.txt
ostro_listener/etc/ostro_listener/: ostro-listener  ostro-listener.conf.txt  ostro-listener.initd.txt  passwd.txt
ostro_listener/ostro_listener/: daemonizer.py  listener.py  listener_daemon.py  oslo_messages.py
ostro_listener/valet_listener/: daemon.py  listener.py
tests/functional/: .project  .testr.conf  run_examples  run_test.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
valet_api/: PKG-INFO  README.md  cleandb.sh  populate.cql  requirements.txt  setup.cfg  setup.py
valet_api/doc/: README.md
valet_api/etc/valet_api/: app.wsgi  config.py  config.template.py
valet_api/valet_api/: app.py  identity.py  ostro_helper.py  wsgi.py
valet_api/valet_api/commands/: populate.py
valet_api/valet_api/common/: hooks.py  identity.py  messaging.py  ostro_helper.py
valet_api/valet_api/controllers/: __init__.py  errors.py  groups.py  placements.py  plans.py  root.py  status.py  v1.py
valet_api/valet_api/models/: __init__.py
valet_api/valet_api/tests/: README.md  Valet.json.postman_collection  config.py  conftest.py
valet_os/: PKG-INFO  README.md  setup.cfg  setup.py
valet_os/valet_os/common/: valet_api.py
valet_os/valet_os/heat/: plugins.py
valet_os/valet_os/nova/: valet_filter.py
(+1031 files in other folders)
