[metadata]
name = allegro
version = 0.1
summary = Allegro - QoS Orchestration for OpenStack
description-file =
    README.rst
license = MIT
author = Joe D'Andrea
author-email = jdandrea@research.att.com
home-page = https://forge.research.att.com/projects/qosorch
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    qosorch
    qosdeploy
data_files =
    etc/heat = heat/*

# cinder.scheduler.filters =
#     AllegroFilter = qosorch.openstack.cinder.allegro_filter:AllegroFilter
#     AllegroWeigher = qosorch.openstack.cinder.allegro_weigher:AllegroWeigher
# nova.scheduler.filters =
#     AllegroFilter = qosorch.openstack.nova.allegro_filter:AllegroFilter
#     AllegroWeigher = qosorch.openstack.nova.allegro_weigher:AllegroWeigher
[entry_points]
cinder.scheduler.filters =
    AllegroFilter = qosorch.openstack.cinder.allegro_filter:AllegroFilter
heat.stack_lifecycle_plugins =
    qosorch.allegro.lifecycle_plugin = qosorch.allegro_heat:AllegroLifecyclePlugin

console_scripts =
    qosdeploy = qosdeploy.shell:main

[global]
setup-hooks =
    pbr.hooks.setup_hook
