[metadata]
name = allegro
url = https://forge.research.att.com/projects/qosorch
version = 0.1
summary = QoS Orchestration for OpenStack
description-file =
    README.rst
author = AT&T
author-email = jdandrea@research.att.com
license = Apache
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    qosorch
    qosdeploy
data_files =
    etc/heat = heat/*

# cinder.scheduler.filters =
#     AllegroFilter = qosorch.openstack.cinder.allegro_filter:AllegroFilter
#     AllegroWeigher = qosorch.openstack.cinder.allegro_weigher:AllegroWeigher
# nova.scheduler.filters =
#     AllegroFilter = qosorch.openstack.nova.allegro_filter:AllegroFilter
#     AllegroWeigher = qosorch.openstack.nova.allegro_weigher:AllegroWeigher
[entry_points]
cinder.scheduler.filters =
    AllegroFilter = qosorch.openstack.cinder.allegro_filter:AllegroFilter
heat.stack_lifecycle_plugins =
    qosorch.allegro.lifecycle_plugin = qosorch.allegro_heat:AllegroLifecyclePlugin

console_scripts =
    qosdeploy = qosdeploy.shell:main

#oslo.config.opts =
#    allegro = allegro.opts:list_opts

[global]
setup-hooks =
    pbr.hooks.setup_hook
