[metadata]
name = valet
summary = Valet Placement Service API
version = 0.1
# description-file = README.md
author = AT&T
author-email = jdandrea@research.att.com
homepage = https://github.com/att-comdev/valet
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = valet
data_files = etc/valet/ = etc/*

[entry_points]
pecan.command =
    populate = valet.api.v1.commands.populate:PopulateCommand
tempest.test_plugins =
    valet_tests = valet.tests.tempest.plugin:ValetTempestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True
