[metadata]
name = ostro-listener
summary = Ostro Event Listener
description-file =
    README.md
author = AT&T
author-email = jdandrea@research.att.com
homepage = https://codecloud.web.att.com/projects/ST_CLOUDQOS/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    ostro_listener
data_files =
    etc/ostro_listener = etc/ostro_listener/*
