[metadata]
name = valet-api
summary = Valet Placement Service API
description-file =
    README.md
author = AT&T
author-email = jdandrea@research.att.com
homepage = https://codecloud.web.att.com/projects/ST_CLOUDQOS/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    valet_api
data_files =
    etc/valet_api = etc/valet_api/*

[entry_points]
pecan.command =
    populate = valet_api.commands.populate:PopulateCommand

[nosetests]
match = ^test
where = valet
nocapture = 1
cover-package = valet_api
cover-erase = 1
