[metadata]
name = allegro
summary = OpenStack Resource Placement
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    allegro

[entry_points]
allegro.notification =
    instance = allegro.compute.notifications.instance:Instance
    instance_scheduled = allegro.compute.notifications.instance:InstanceScheduled
    network = allegro.network.notifications:Network
    subnet = allegro.network.notifications:Subnet
    port = allegro.network.notifications:Port
    router = allegro.network.notifications:Router
    floatingip = allegro.network.notifications:FloatingIP
    http.request = allegro.middleware:HTTPRequest
    http.response = allegro.middleware:HTTPResponse
    hardware.ipmi.temperature = allegro.ipmi.notifications.ironic:TemperatureSensorNotification
    hardware.ipmi.voltage = allegro.ipmi.notifications.ironic:VoltageSensorNotification
    hardware.ipmi.current = allegro.ipmi.notifications.ironic:CurrentSensorNotification
    hardware.ipmi.fan = allegro.ipmi.notifications.ironic:FanSensorNotification
    network.services.lb.pool = allegro.network.notifications:Pool
    network.services.lb.vip = allegro.network.notifications:Vip
    network.services.lb.member = allegro.network.notifications:Member
    network.services.lb.health_monitor = allegro.network.notifications:HealthMonitor
    network.services.firewall = allegro.network.notifications:Firewall
    network.services.firewall.policy = allegro.network.notifications:FirewallPolicy
    network.services.firewall.rule = allegro.network.notifications:FirewallRule
    network.services.vpn = allegro.network.notifications:VPNService
    network.services.vpn.ipsecpolicy = allegro.network.notifications:IPSecPolicy
    network.services.vpn.ikepolicy = allegro.network.notifications:IKEPolicy
    network.services.vpn.connections = allegro.network.notifications:IPSecSiteConnection
    _sample = allegro.telemetry.notifications:TelemetryIpc
    trove.instance.exists = allegro.database.notifications:InstanceExists
    dns.domain.exists = allegro.dns.notifications:DomainExists
    meter = allegro.meter.notifications:ProcessMeterNotifications

allegro.discover =
    local_instances = allegro.compute.discovery:InstanceDiscovery
    endpoint = allegro.agent.discovery.endpoint:EndpointDiscovery
    tenant = allegro.agent.discovery.tenant:TenantDiscovery
    local_node = allegro.agent.discovery.localnode:LocalNodeDiscovery
    lb_pools = allegro.network.services.discovery:LBPoolsDiscovery
    lb_vips = allegro.network.services.discovery:LBVipsDiscovery
    lb_members = allegro.network.services.discovery:LBMembersDiscovery
    lb_health_probes = allegro.network.services.discovery:LBHealthMonitorsDiscovery
    vpn_services    = allegro.network.services.discovery:VPNServicesDiscovery
    ipsec_connections  = allegro.network.services.discovery:IPSecConnectionsDiscovery
    fw_services = allegro.network.services.discovery:FirewallDiscovery
    fw_policy = allegro.network.services.discovery:FirewallPolicyDiscovery
    tripleo_overcloud_nodes = allegro.hardware.discovery:NodesDiscoveryTripleO

allegro.poll.compute =
    disk.read.requests = allegro.compute.pollsters.disk:ReadRequestsPollster
    disk.write.requests = allegro.compute.pollsters.disk:WriteRequestsPollster
    disk.read.bytes = allegro.compute.pollsters.disk:ReadBytesPollster
    disk.write.bytes = allegro.compute.pollsters.disk:WriteBytesPollster
    disk.read.requests.rate = allegro.compute.pollsters.disk:ReadRequestsRatePollster
    disk.write.requests.rate = allegro.compute.pollsters.disk:WriteRequestsRatePollster
    disk.read.bytes.rate = allegro.compute.pollsters.disk:ReadBytesRatePollster
    disk.write.bytes.rate = allegro.compute.pollsters.disk:WriteBytesRatePollster
    disk.device.read.requests = allegro.compute.pollsters.disk:PerDeviceReadRequestsPollster
    disk.device.write.requests = allegro.compute.pollsters.disk:PerDeviceWriteRequestsPollster
    disk.device.read.bytes = allegro.compute.pollsters.disk:PerDeviceReadBytesPollster
    disk.device.write.bytes = allegro.compute.pollsters.disk:PerDeviceWriteBytesPollster
    disk.device.read.requests.rate = allegro.compute.pollsters.disk:PerDeviceReadRequestsRatePollster
    disk.device.write.requests.rate = allegro.compute.pollsters.disk:PerDeviceWriteRequestsRatePollster
    disk.device.read.bytes.rate = allegro.compute.pollsters.disk:PerDeviceReadBytesRatePollster
    disk.device.write.bytes.rate = allegro.compute.pollsters.disk:PerDeviceWriteBytesRatePollster
    disk.latency = allegro.compute.pollsters.disk:DiskLatencyPollster
    disk.device.latency = allegro.compute.pollsters.disk:PerDeviceDiskLatencyPollster
    disk.iops = allegro.compute.pollsters.disk:DiskIOPSPollster
    disk.device.iops = allegro.compute.pollsters.disk:PerDeviceDiskIOPSPollster
    cpu = allegro.compute.pollsters.cpu:CPUPollster
    cpu_util = allegro.compute.pollsters.cpu:CPUUtilPollster
    network.incoming.bytes = allegro.compute.pollsters.net:IncomingBytesPollster
    network.incoming.packets = allegro.compute.pollsters.net:IncomingPacketsPollster
    network.outgoing.bytes = allegro.compute.pollsters.net:OutgoingBytesPollster
    network.outgoing.packets = allegro.compute.pollsters.net:OutgoingPacketsPollster
    network.incoming.bytes.rate = allegro.compute.pollsters.net:IncomingBytesRatePollster
    network.outgoing.bytes.rate = allegro.compute.pollsters.net:OutgoingBytesRatePollster
    instance = allegro.compute.pollsters.instance:InstancePollster
    memory.usage = allegro.compute.pollsters.memory:MemoryUsagePollster
    memory.resident = allegro.compute.pollsters.memory:MemoryResidentPollster
    disk.capacity = allegro.compute.pollsters.disk:CapacityPollster
    disk.allocation = allegro.compute.pollsters.disk:AllocationPollster
    disk.usage = allegro.compute.pollsters.disk:PhysicalPollster
    disk.device.capacity = allegro.compute.pollsters.disk:PerDeviceCapacityPollster
    disk.device.allocation = allegro.compute.pollsters.disk:PerDeviceAllocationPollster
    disk.device.usage = allegro.compute.pollsters.disk:PerDevicePhysicalPollster

allegro.poll.ipmi =
    hardware.ipmi.node.power = allegro.ipmi.pollsters.node:PowerPollster
    hardware.ipmi.node.temperature = allegro.ipmi.pollsters.node:InletTemperaturePollster
    hardware.ipmi.node.outlet_temperature = allegro.ipmi.pollsters.node:OutletTemperaturePollster
    hardware.ipmi.node.airflow = allegro.ipmi.pollsters.node:AirflowPollster
    hardware.ipmi.node.cups = allegro.ipmi.pollsters.node:CUPSIndexPollster
    hardware.ipmi.node.cpu_util = allegro.ipmi.pollsters.node:CPUUtilPollster
    hardware.ipmi.node.mem_util = allegro.ipmi.pollsters.node:MemUtilPollster
    hardware.ipmi.node.io_util = allegro.ipmi.pollsters.node:IOUtilPollster
    hardware.ipmi.temperature = allegro.ipmi.pollsters.sensor:TemperatureSensorPollster
    hardware.ipmi.voltage = allegro.ipmi.pollsters.sensor:VoltageSensorPollster
    hardware.ipmi.current = allegro.ipmi.pollsters.sensor:CurrentSensorPollster
    hardware.ipmi.fan = allegro.ipmi.pollsters.sensor:FanSensorPollster

allegro.poll.central =
    ip.floating = allegro.network.floatingip:FloatingIPPollster
    image = allegro.image.glance:ImagePollster
    image.size = allegro.image.glance:ImageSizePollster
    rgw.containers.objects = allegro.objectstore.rgw:ContainersObjectsPollster
    rgw.containers.objects.size = allegro.objectstore.rgw:ContainersSizePollster
    rgw.objects = allegro.objectstore.rgw:ObjectsPollster
    rgw.objects.size = allegro.objectstore.rgw:ObjectsSizePollster
    rgw.objects.containers = allegro.objectstore.rgw:ObjectsContainersPollster
    rgw.usage = allegro.objectstore.rgw:UsagePollster
    storage.containers.objects = allegro.objectstore.swift:ContainersObjectsPollster
    storage.containers.objects.size = allegro.objectstore.swift:ContainersSizePollster
    storage.objects = allegro.objectstore.swift:ObjectsPollster
    storage.objects.size = allegro.objectstore.swift:ObjectsSizePollster
    storage.objects.containers = allegro.objectstore.swift:ObjectsContainersPollster
    energy = allegro.energy.kwapi:EnergyPollster
    power = allegro.energy.kwapi:PowerPollster
    switch.port = allegro.network.statistics.port:PortPollster
    switch.port.receive.packets = allegro.network.statistics.port:PortPollsterReceivePackets
    switch.port.transmit.packets = allegro.network.statistics.port:PortPollsterTransmitPackets
    switch.port.receive.bytes = allegro.network.statistics.port:PortPollsterReceiveBytes
    switch.port.transmit.bytes = allegro.network.statistics.port:PortPollsterTransmitBytes
    switch.port.receive.drops = allegro.network.statistics.port:PortPollsterReceiveDrops
    switch.port.transmit.drops = allegro.network.statistics.port:PortPollsterTransmitDrops
    switch.port.receive.errors = allegro.network.statistics.port:PortPollsterReceiveErrors
    switch.port.transmit.errors = allegro.network.statistics.port:PortPollsterTransmitErrors
    switch.port.receive.frame_error = allegro.network.statistics.port:PortPollsterReceiveFrameErrors
    switch.port.receive.overrun_error = allegro.network.statistics.port:PortPollsterReceiveOverrunErrors
    switch.port.receive.crc_error = allegro.network.statistics.port:PortPollsterReceiveCRCErrors
    switch.port.collision.count = allegro.network.statistics.port:PortPollsterCollisionCount
    switch.table = allegro.network.statistics.table:TablePollster
    switch.table.active.entries = allegro.network.statistics.table:TablePollsterActiveEntries
    switch.table.lookup.packets = allegro.network.statistics.table:TablePollsterLookupPackets
    switch.table.matched.packets = allegro.network.statistics.table:TablePollsterMatchedPackets
    switch = allegro.network.statistics.switch:SWPollster
    switch.flow = allegro.network.statistics.flow:FlowPollster
    switch.flow.bytes = allegro.network.statistics.flow:FlowPollsterBytes
    switch.flow.duration.nanoseconds = allegro.network.statistics.flow:FlowPollsterDurationNanoseconds
    switch.flow.duration.seconds = allegro.network.statistics.flow:FlowPollsterDurationSeconds
    switch.flow.packets = allegro.network.statistics.flow:FlowPollsterPackets
    network.services.lb.pool = allegro.network.services.lbaas:LBPoolPollster
    network.services.lb.vip = allegro.network.services.lbaas:LBVipPollster
    network.services.lb.member = allegro.network.services.lbaas:LBMemberPollster
    network.services.lb.health_monitor = allegro.network.services.lbaas:LBHealthMonitorPollster
    network.services.lb.total.connections = allegro.network.services.lbaas:LBTotalConnectionsPollster
    network.services.lb.active.connections = allegro.network.services.lbaas:LBActiveConnectionsPollster
    network.services.lb.incoming.bytes = allegro.network.services.lbaas:LBBytesInPollster
    network.services.lb.outgoing.bytes = allegro.network.services.lbaas:LBBytesOutPollster
    network.services.vpn = allegro.network.services.vpnaas:VPNServicesPollster
    network.services.vpn.connections = allegro.network.services.vpnaas:IPSecConnectionsPollster
    network.services.firewall = allegro.network.services.fwaas:FirewallPollster
    network.services.firewall.policy = allegro.network.services.fwaas:FirewallPolicyPollster

allegro.builder.poll.central =
    hardware.snmp = allegro.hardware.pollsters.generic:GenericHardwareDeclarativePollster

allegro.alarm.storage =
    log = allegro.alarm.storage.impl_log:Connection
    mongodb = allegro.alarm.storage.impl_mongodb:Connection
    mysql = allegro.alarm.storage.impl_sqlalchemy:Connection
    postgresql = allegro.alarm.storage.impl_sqlalchemy:Connection
    sqlite = allegro.alarm.storage.impl_sqlalchemy:Connection
    hbase = allegro.alarm.storage.impl_hbase:Connection
    db2 = allegro.alarm.storage.impl_db2:Connection

allegro.event.storage =
    es = allegro.event.storage.impl_elasticsearch:Connection
    log = allegro.event.storage.impl_log:Connection
    mongodb = allegro.event.storage.impl_mongodb:Connection
    mysql = allegro.event.storage.impl_sqlalchemy:Connection
    postgresql = allegro.event.storage.impl_sqlalchemy:Connection
    sqlite = allegro.event.storage.impl_sqlalchemy:Connection
    hbase = allegro.event.storage.impl_hbase:Connection
    db2 = allegro.event.storage.impl_db2:Connection

allegro.metering.storage =
    log = allegro.storage.impl_log:Connection
    mongodb = allegro.storage.impl_mongodb:Connection
    mysql = allegro.storage.impl_sqlalchemy:Connection
    postgresql = allegro.storage.impl_sqlalchemy:Connection
    sqlite = allegro.storage.impl_sqlalchemy:Connection
    hbase = allegro.storage.impl_hbase:Connection
    db2 = allegro.storage.impl_db2:Connection

allegro.compute.virt =
    libvirt = allegro.compute.virt.libvirt.inspector:LibvirtInspector
    hyperv = allegro.compute.virt.hyperv.inspector:HyperVInspector
    vsphere = allegro.compute.virt.vmware.inspector:VsphereInspector
    xenapi = allegro.compute.virt.xenapi.inspector:XenapiInspector

allegro.hardware.inspectors =
    snmp = allegro.hardware.inspector.snmp:SNMPInspector

allegro.transformer =
    accumulator = allegro.transformer.accumulator:TransformerAccumulator
    delta = allegro.transformer.conversions:DeltaTransformer
    unit_conversion = allegro.transformer.conversions:ScalingTransformer
    rate_of_change = allegro.transformer.conversions:RateOfChangeTransformer
    aggregator = allegro.transformer.conversions:AggregatorTransformer
    arithmetic = allegro.transformer.arithmetic:ArithmeticTransformer

allegro.publisher =
    test = allegro.publisher.test:TestPublisher
    meter_publisher = allegro.publisher.messaging:RPCPublisher
    meter = allegro.publisher.messaging:RPCPublisher
    rpc = allegro.publisher.messaging:RPCPublisher
    notifier = allegro.publisher.messaging:SampleNotifierPublisher
    udp = allegro.publisher.udp:UDPPublisher
    file = allegro.publisher.file:FilePublisher
    direct = allegro.publisher.direct:DirectPublisher
    kafka = allegro.publisher.kafka_broker:KafkaBrokerPublisher

allegro.event.publisher =
    test = allegro.publisher.test:TestPublisher
    direct = allegro.publisher.direct:DirectPublisher
    notifier = allegro.publisher.messaging:EventNotifierPublisher
    kafka = allegro.publisher.kafka_broker:KafkaBrokerPublisher

allegro.alarm.rule =
    threshold = allegro.api.controllers.v2.alarm_rules.threshold:AlarmThresholdRule
    combination = allegro.api.controllers.v2.alarm_rules.combination:AlarmCombinationRule
    gnocchi_resources_threshold = allegro.api.controllers.v2.alarm_rules.gnocchi:MetricOfResourceRule
    gnocchi_aggregation_by_metrics_threshold = allegro.api.controllers.v2.alarm_rules.gnocchi:AggregationMetricsByIdLookupRule
    gnocchi_aggregation_by_resources_threshold = allegro.api.controllers.v2.alarm_rules.gnocchi:AggregationMetricByResourcesLookupRule

allegro.alarm.evaluator =
    threshold = allegro.alarm.evaluator.threshold:ThresholdEvaluator
    combination = allegro.alarm.evaluator.combination:CombinationEvaluator
    gnocchi_resources_threshold = allegro.alarm.evaluator.gnocchi:GnocchiThresholdEvaluator
    gnocchi_aggregation_by_metrics_threshold = allegro.alarm.evaluator.gnocchi:GnocchiThresholdEvaluator
    gnocchi_aggregation_by_resources_threshold = allegro.alarm.evaluator.gnocchi:GnocchiThresholdEvaluator

allegro.alarm.notifier =
    log = allegro.alarm.notifier.log:LogAlarmNotifier
    test = allegro.alarm.notifier.test:TestAlarmNotifier
    http = allegro.alarm.notifier.rest:RestAlarmNotifier
    https = allegro.alarm.notifier.rest:RestAlarmNotifier
    trust+http = allegro.alarm.notifier.trust:TrustRestAlarmNotifier
    trust+https = allegro.alarm.notifier.trust:TrustRestAlarmNotifier

allegro.event.trait_plugin =
    split = allegro.event.trait_plugins:SplitterTraitPlugin
    bitfield = allegro.event.trait_plugins:BitfieldTraitPlugin

console_scripts =
    allegro-api = allegro.cmd.api:main
    allegro-polling = allegro.cmd.eventlet.polling:main
    allegro-agent-notification = allegro.cmd.eventlet.agent_notification:main
    allegro-send-sample = allegro.cmd.eventlet.sample:send_sample
    allegro-dbsync = allegro.cmd.eventlet.storage:dbsync
    allegro-expirer = allegro.cmd.eventlet.storage:expirer
    allegro-rootwrap = oslo_rootwrap.cmd:main
    allegro-collector = allegro.cmd.eventlet.collector:main
    allegro-alarm-evaluator = allegro.cmd.eventlet.alarm:evaluator
    allegro-alarm-notifier = allegro.cmd.eventlet.alarm:notifier

allegro.dispatcher =
    database = allegro.dispatcher.database:DatabaseDispatcher
    file = allegro.dispatcher.file:FileDispatcher
    http = allegro.dispatcher.http:HttpDispatcher
    gnocchi = allegro.dispatcher.gnocchi:GnocchiDispatcher

network.statistics.drivers =
    opendaylight = allegro.network.statistics.opendaylight.driver:OpenDayLightDriver
    opencontrail = allegro.network.statistics.opencontrail.driver:OpencontrailDriver

oslo.config.opts =
    allegro = allegro.opts:list_opts

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = true
autodoc_index_modules = true

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = allegro/locale/allegro.pot

[compile_catalog]
directory = allegro/locale
domain = allegro

[update_catalog]
domain = allegro
output_dir = allegro/locale
input_file = allegro/locale/allegro.pot
