[metadata]
name = valet
summary = OpenStack Resource Placement
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    valet

[entry_points]
valet.notification =
    instance = valet.compute.notifications.instance:Instance
    instance_scheduled = valet.compute.notifications.instance:InstanceScheduled
    network = valet.network.notifications:Network
    subnet = valet.network.notifications:Subnet
    port = valet.network.notifications:Port
    router = valet.network.notifications:Router
    floatingip = valet.network.notifications:FloatingIP
    http.request = valet.middleware:HTTPRequest
    http.response = valet.middleware:HTTPResponse
    hardware.ipmi.temperature = valet.ipmi.notifications.ironic:TemperatureSensorNotification
    hardware.ipmi.voltage = valet.ipmi.notifications.ironic:VoltageSensorNotification
    hardware.ipmi.current = valet.ipmi.notifications.ironic:CurrentSensorNotification
    hardware.ipmi.fan = valet.ipmi.notifications.ironic:FanSensorNotification
    network.services.lb.pool = valet.network.notifications:Pool
    network.services.lb.vip = valet.network.notifications:Vip
    network.services.lb.member = valet.network.notifications:Member
    network.services.lb.health_monitor = valet.network.notifications:HealthMonitor
    network.services.firewall = valet.network.notifications:Firewall
    network.services.firewall.policy = valet.network.notifications:FirewallPolicy
    network.services.firewall.rule = valet.network.notifications:FirewallRule
    network.services.vpn = valet.network.notifications:VPNService
    network.services.vpn.ipsecpolicy = valet.network.notifications:IPSecPolicy
    network.services.vpn.ikepolicy = valet.network.notifications:IKEPolicy
    network.services.vpn.connections = valet.network.notifications:IPSecSiteConnection
    _sample = valet.telemetry.notifications:TelemetryIpc
    trove.instance.exists = valet.database.notifications:InstanceExists
    dns.domain.exists = valet.dns.notifications:DomainExists
    meter = valet.meter.notifications:ProcessMeterNotifications

valet.discover =
    local_instances = valet.compute.discovery:InstanceDiscovery
    endpoint = valet.agent.discovery.endpoint:EndpointDiscovery
    tenant = valet.agent.discovery.tenant:TenantDiscovery
    local_node = valet.agent.discovery.localnode:LocalNodeDiscovery
    lb_pools = valet.network.services.discovery:LBPoolsDiscovery
    lb_vips = valet.network.services.discovery:LBVipsDiscovery
    lb_members = valet.network.services.discovery:LBMembersDiscovery
    lb_health_probes = valet.network.services.discovery:LBHealthMonitorsDiscovery
    vpn_services    = valet.network.services.discovery:VPNServicesDiscovery
    ipsec_connections  = valet.network.services.discovery:IPSecConnectionsDiscovery
    fw_services = valet.network.services.discovery:FirewallDiscovery
    fw_policy = valet.network.services.discovery:FirewallPolicyDiscovery
    tripleo_overcloud_nodes = valet.hardware.discovery:NodesDiscoveryTripleO

valet.poll.compute =
    disk.read.requests = valet.compute.pollsters.disk:ReadRequestsPollster
    disk.write.requests = valet.compute.pollsters.disk:WriteRequestsPollster
    disk.read.bytes = valet.compute.pollsters.disk:ReadBytesPollster
    disk.write.bytes = valet.compute.pollsters.disk:WriteBytesPollster
    disk.read.requests.rate = valet.compute.pollsters.disk:ReadRequestsRatePollster
    disk.write.requests.rate = valet.compute.pollsters.disk:WriteRequestsRatePollster
    disk.read.bytes.rate = valet.compute.pollsters.disk:ReadBytesRatePollster
    disk.write.bytes.rate = valet.compute.pollsters.disk:WriteBytesRatePollster
    disk.device.read.requests = valet.compute.pollsters.disk:PerDeviceReadRequestsPollster
    disk.device.write.requests = valet.compute.pollsters.disk:PerDeviceWriteRequestsPollster
    disk.device.read.bytes = valet.compute.pollsters.disk:PerDeviceReadBytesPollster
    disk.device.write.bytes = valet.compute.pollsters.disk:PerDeviceWriteBytesPollster
    disk.device.read.requests.rate = valet.compute.pollsters.disk:PerDeviceReadRequestsRatePollster
    disk.device.write.requests.rate = valet.compute.pollsters.disk:PerDeviceWriteRequestsRatePollster
    disk.device.read.bytes.rate = valet.compute.pollsters.disk:PerDeviceReadBytesRatePollster
    disk.device.write.bytes.rate = valet.compute.pollsters.disk:PerDeviceWriteBytesRatePollster
    disk.latency = valet.compute.pollsters.disk:DiskLatencyPollster
    disk.device.latency = valet.compute.pollsters.disk:PerDeviceDiskLatencyPollster
    disk.iops = valet.compute.pollsters.disk:DiskIOPSPollster
    disk.device.iops = valet.compute.pollsters.disk:PerDeviceDiskIOPSPollster
    cpu = valet.compute.pollsters.cpu:CPUPollster
    cpu_util = valet.compute.pollsters.cpu:CPUUtilPollster
    network.incoming.bytes = valet.compute.pollsters.net:IncomingBytesPollster
    network.incoming.packets = valet.compute.pollsters.net:IncomingPacketsPollster
    network.outgoing.bytes = valet.compute.pollsters.net:OutgoingBytesPollster
    network.outgoing.packets = valet.compute.pollsters.net:OutgoingPacketsPollster
    network.incoming.bytes.rate = valet.compute.pollsters.net:IncomingBytesRatePollster
    network.outgoing.bytes.rate = valet.compute.pollsters.net:OutgoingBytesRatePollster
    instance = valet.compute.pollsters.instance:InstancePollster
    memory.usage = valet.compute.pollsters.memory:MemoryUsagePollster
    memory.resident = valet.compute.pollsters.memory:MemoryResidentPollster
    disk.capacity = valet.compute.pollsters.disk:CapacityPollster
    disk.allocation = valet.compute.pollsters.disk:AllocationPollster
    disk.usage = valet.compute.pollsters.disk:PhysicalPollster
    disk.device.capacity = valet.compute.pollsters.disk:PerDeviceCapacityPollster
    disk.device.allocation = valet.compute.pollsters.disk:PerDeviceAllocationPollster
    disk.device.usage = valet.compute.pollsters.disk:PerDevicePhysicalPollster

valet.poll.ipmi =
    hardware.ipmi.node.power = valet.ipmi.pollsters.node:PowerPollster
    hardware.ipmi.node.temperature = valet.ipmi.pollsters.node:InletTemperaturePollster
    hardware.ipmi.node.outlet_temperature = valet.ipmi.pollsters.node:OutletTemperaturePollster
    hardware.ipmi.node.airflow = valet.ipmi.pollsters.node:AirflowPollster
    hardware.ipmi.node.cups = valet.ipmi.pollsters.node:CUPSIndexPollster
    hardware.ipmi.node.cpu_util = valet.ipmi.pollsters.node:CPUUtilPollster
    hardware.ipmi.node.mem_util = valet.ipmi.pollsters.node:MemUtilPollster
    hardware.ipmi.node.io_util = valet.ipmi.pollsters.node:IOUtilPollster
    hardware.ipmi.temperature = valet.ipmi.pollsters.sensor:TemperatureSensorPollster
    hardware.ipmi.voltage = valet.ipmi.pollsters.sensor:VoltageSensorPollster
    hardware.ipmi.current = valet.ipmi.pollsters.sensor:CurrentSensorPollster
    hardware.ipmi.fan = valet.ipmi.pollsters.sensor:FanSensorPollster

valet.poll.central =
    ip.floating = valet.network.floatingip:FloatingIPPollster
    image = valet.image.glance:ImagePollster
    image.size = valet.image.glance:ImageSizePollster
    rgw.containers.objects = valet.objectstore.rgw:ContainersObjectsPollster
    rgw.containers.objects.size = valet.objectstore.rgw:ContainersSizePollster
    rgw.objects = valet.objectstore.rgw:ObjectsPollster
    rgw.objects.size = valet.objectstore.rgw:ObjectsSizePollster
    rgw.objects.containers = valet.objectstore.rgw:ObjectsContainersPollster
    rgw.usage = valet.objectstore.rgw:UsagePollster
    storage.containers.objects = valet.objectstore.swift:ContainersObjectsPollster
    storage.containers.objects.size = valet.objectstore.swift:ContainersSizePollster
    storage.objects = valet.objectstore.swift:ObjectsPollster
    storage.objects.size = valet.objectstore.swift:ObjectsSizePollster
    storage.objects.containers = valet.objectstore.swift:ObjectsContainersPollster
    energy = valet.energy.kwapi:EnergyPollster
    power = valet.energy.kwapi:PowerPollster
    switch.port = valet.network.statistics.port:PortPollster
    switch.port.receive.packets = valet.network.statistics.port:PortPollsterReceivePackets
    switch.port.transmit.packets = valet.network.statistics.port:PortPollsterTransmitPackets
    switch.port.receive.bytes = valet.network.statistics.port:PortPollsterReceiveBytes
    switch.port.transmit.bytes = valet.network.statistics.port:PortPollsterTransmitBytes
    switch.port.receive.drops = valet.network.statistics.port:PortPollsterReceiveDrops
    switch.port.transmit.drops = valet.network.statistics.port:PortPollsterTransmitDrops
    switch.port.receive.errors = valet.network.statistics.port:PortPollsterReceiveErrors
    switch.port.transmit.errors = valet.network.statistics.port:PortPollsterTransmitErrors
    switch.port.receive.frame_error = valet.network.statistics.port:PortPollsterReceiveFrameErrors
    switch.port.receive.overrun_error = valet.network.statistics.port:PortPollsterReceiveOverrunErrors
    switch.port.receive.crc_error = valet.network.statistics.port:PortPollsterReceiveCRCErrors
    switch.port.collision.count = valet.network.statistics.port:PortPollsterCollisionCount
    switch.table = valet.network.statistics.table:TablePollster
    switch.table.active.entries = valet.network.statistics.table:TablePollsterActiveEntries
    switch.table.lookup.packets = valet.network.statistics.table:TablePollsterLookupPackets
    switch.table.matched.packets = valet.network.statistics.table:TablePollsterMatchedPackets
    switch = valet.network.statistics.switch:SWPollster
    switch.flow = valet.network.statistics.flow:FlowPollster
    switch.flow.bytes = valet.network.statistics.flow:FlowPollsterBytes
    switch.flow.duration.nanoseconds = valet.network.statistics.flow:FlowPollsterDurationNanoseconds
    switch.flow.duration.seconds = valet.network.statistics.flow:FlowPollsterDurationSeconds
    switch.flow.packets = valet.network.statistics.flow:FlowPollsterPackets
    network.services.lb.pool = valet.network.services.lbaas:LBPoolPollster
    network.services.lb.vip = valet.network.services.lbaas:LBVipPollster
    network.services.lb.member = valet.network.services.lbaas:LBMemberPollster
    network.services.lb.health_monitor = valet.network.services.lbaas:LBHealthMonitorPollster
    network.services.lb.total.connections = valet.network.services.lbaas:LBTotalConnectionsPollster
    network.services.lb.active.connections = valet.network.services.lbaas:LBActiveConnectionsPollster
    network.services.lb.incoming.bytes = valet.network.services.lbaas:LBBytesInPollster
    network.services.lb.outgoing.bytes = valet.network.services.lbaas:LBBytesOutPollster
    network.services.vpn = valet.network.services.vpnaas:VPNServicesPollster
    network.services.vpn.connections = valet.network.services.vpnaas:IPSecConnectionsPollster
    network.services.firewall = valet.network.services.fwaas:FirewallPollster
    network.services.firewall.policy = valet.network.services.fwaas:FirewallPolicyPollster

valet.builder.poll.central =
    hardware.snmp = valet.hardware.pollsters.generic:GenericHardwareDeclarativePollster

valet.alarm.storage =
    log = valet.alarm.storage.impl_log:Connection
    mongodb = valet.alarm.storage.impl_mongodb:Connection
    mysql = valet.alarm.storage.impl_sqlalchemy:Connection
    postgresql = valet.alarm.storage.impl_sqlalchemy:Connection
    sqlite = valet.alarm.storage.impl_sqlalchemy:Connection
    hbase = valet.alarm.storage.impl_hbase:Connection
    db2 = valet.alarm.storage.impl_db2:Connection

valet.event.storage =
    es = valet.event.storage.impl_elasticsearch:Connection
    log = valet.event.storage.impl_log:Connection
    mongodb = valet.event.storage.impl_mongodb:Connection
    mysql = valet.event.storage.impl_sqlalchemy:Connection
    postgresql = valet.event.storage.impl_sqlalchemy:Connection
    sqlite = valet.event.storage.impl_sqlalchemy:Connection
    hbase = valet.event.storage.impl_hbase:Connection
    db2 = valet.event.storage.impl_db2:Connection

valet.metering.storage =
    log = valet.storage.impl_log:Connection
    mongodb = valet.storage.impl_mongodb:Connection
    mysql = valet.storage.impl_sqlalchemy:Connection
    postgresql = valet.storage.impl_sqlalchemy:Connection
    sqlite = valet.storage.impl_sqlalchemy:Connection
    hbase = valet.storage.impl_hbase:Connection
    db2 = valet.storage.impl_db2:Connection

valet.compute.virt =
    libvirt = valet.compute.virt.libvirt.inspector:LibvirtInspector
    hyperv = valet.compute.virt.hyperv.inspector:HyperVInspector
    vsphere = valet.compute.virt.vmware.inspector:VsphereInspector
    xenapi = valet.compute.virt.xenapi.inspector:XenapiInspector

valet.hardware.inspectors =
    snmp = valet.hardware.inspector.snmp:SNMPInspector

valet.transformer =
    accumulator = valet.transformer.accumulator:TransformerAccumulator
    delta = valet.transformer.conversions:DeltaTransformer
    unit_conversion = valet.transformer.conversions:ScalingTransformer
    rate_of_change = valet.transformer.conversions:RateOfChangeTransformer
    aggregator = valet.transformer.conversions:AggregatorTransformer
    arithmetic = valet.transformer.arithmetic:ArithmeticTransformer

valet.publisher =
    test = valet.publisher.test:TestPublisher
    meter_publisher = valet.publisher.messaging:RPCPublisher
    meter = valet.publisher.messaging:RPCPublisher
    rpc = valet.publisher.messaging:RPCPublisher
    notifier = valet.publisher.messaging:SampleNotifierPublisher
    udp = valet.publisher.udp:UDPPublisher
    file = valet.publisher.file:FilePublisher
    direct = valet.publisher.direct:DirectPublisher
    kafka = valet.publisher.kafka_broker:KafkaBrokerPublisher

valet.event.publisher =
    test = valet.publisher.test:TestPublisher
    direct = valet.publisher.direct:DirectPublisher
    notifier = valet.publisher.messaging:EventNotifierPublisher
    kafka = valet.publisher.kafka_broker:KafkaBrokerPublisher

valet.alarm.rule =
    threshold = valet.api.controllers.v2.alarm_rules.threshold:AlarmThresholdRule
    combination = valet.api.controllers.v2.alarm_rules.combination:AlarmCombinationRule
    gnocchi_resources_threshold = valet.api.controllers.v2.alarm_rules.gnocchi:MetricOfResourceRule
    gnocchi_aggregation_by_metrics_threshold = valet.api.controllers.v2.alarm_rules.gnocchi:AggregationMetricsByIdLookupRule
    gnocchi_aggregation_by_resources_threshold = valet.api.controllers.v2.alarm_rules.gnocchi:AggregationMetricByResourcesLookupRule

valet.alarm.evaluator =
    threshold = valet.alarm.evaluator.threshold:ThresholdEvaluator
    combination = valet.alarm.evaluator.combination:CombinationEvaluator
    gnocchi_resources_threshold = valet.alarm.evaluator.gnocchi:GnocchiThresholdEvaluator
    gnocchi_aggregation_by_metrics_threshold = valet.alarm.evaluator.gnocchi:GnocchiThresholdEvaluator
    gnocchi_aggregation_by_resources_threshold = valet.alarm.evaluator.gnocchi:GnocchiThresholdEvaluator

valet.alarm.notifier =
    log = valet.alarm.notifier.log:LogAlarmNotifier
    test = valet.alarm.notifier.test:TestAlarmNotifier
    http = valet.alarm.notifier.rest:RestAlarmNotifier
    https = valet.alarm.notifier.rest:RestAlarmNotifier
    trust+http = valet.alarm.notifier.trust:TrustRestAlarmNotifier
    trust+https = valet.alarm.notifier.trust:TrustRestAlarmNotifier

valet.event.trait_plugin =
    split = valet.event.trait_plugins:SplitterTraitPlugin
    bitfield = valet.event.trait_plugins:BitfieldTraitPlugin

console_scripts =
    valet-api = valet.cmd.api:main
    valet-polling = valet.cmd.eventlet.polling:main
    valet-agent-notification = valet.cmd.eventlet.agent_notification:main
    valet-send-sample = valet.cmd.eventlet.sample:send_sample
    valet-dbsync = valet.cmd.eventlet.storage:dbsync
    valet-expirer = valet.cmd.eventlet.storage:expirer
    valet-rootwrap = oslo_rootwrap.cmd:main
    valet-collector = valet.cmd.eventlet.collector:main
    valet-alarm-evaluator = valet.cmd.eventlet.alarm:evaluator
    valet-alarm-notifier = valet.cmd.eventlet.alarm:notifier

valet.dispatcher =
    database = valet.dispatcher.database:DatabaseDispatcher
    file = valet.dispatcher.file:FileDispatcher
    http = valet.dispatcher.http:HttpDispatcher
    gnocchi = valet.dispatcher.gnocchi:GnocchiDispatcher

network.statistics.drivers =
    opendaylight = valet.network.statistics.opendaylight.driver:OpenDayLightDriver
    opencontrail = valet.network.statistics.opencontrail.driver:OpencontrailDriver

oslo.config.opts =
    valet = valet.opts:list_opts

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = true
autodoc_index_modules = true

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = valet/locale/valet.pot

[compile_catalog]
directory = valet/locale
domain = valet

[update_catalog]
domain = valet
output_dir = valet/locale
input_file = valet/locale/valet.pot
